fix: suppr useless files and fix Collapse title

--- a/src/Components/Slideshow/Index.scss
+++ b/src/Components/Slideshow/Index.scss
@@ -27,7 +27,8 @@
     justify-content: space-between;
     align-items: center;
 
-    img {
+    .arrowLeft,
+    .arrowRight {
       cursor: pointer;
     }
   }
